--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Dashboard.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Dashboard.cshtml
@@ -13,17 +13,17 @@
 <!-- Timeframe -->
 <div class="row">
     <div class="twelve columns" style="top: -35px; height: 15px">
-        <span style="float: left; margin-right: 5px">Timeframe:</span>
-        <select style="float: left; width: 110px" id="dash_dateRangeSel" onchange="ChangeDashboardDateRange()">
+        <span>Timeframe:</span>
+        <select style="width: 125px" id="dash_dateRangeSel" onchange="ChangeDashboardDateRange()">
             <option value="mtd">Month to Date</option>
             <option value="ytd">Year to Date</option>
             <option value="custom">- custom -</option>
         </select>
-        <span style="float: left; margin-left: 10px">Start:</span>
-        <input style="float:left; width:100px" id="dash_startdate" name="startdate" type="text" value="@Html.FormatDate(Model.Start, Model.CultureInfo)" onchange="DashboardDateChanged()" />
-        <span style="float: left; margin-left: 10px">End:</span>
-        <input style="float:left; width:100px" id="dash_enddate" name="enddate" type="text" value="@Html.FormatDate(Model.End, Model.CultureInfo)" onchange="DashboardDateChanged()" />
-        <a class="button" style="padding: 3px; margin-left: 10px" id="dash_filterBtn" href="#" onclick="if($(this).attr('disabled') != 'disabled') RefreshDashboardRange(); return false">Refresh</a>
+        <span class="paddedlabel">Start:</span>
+        <input id="dash_startdate" name="startdate" type="text" value="@Html.FormatDate(Model.Start, Model.CultureInfo)" onchange="DashboardDateChanged()" />
+        <span class="paddedlabel">End:</span>
+        <input id="dash_enddate" name="enddate" type="text" value="@Html.FormatDate(Model.End, Model.CultureInfo)" onchange="DashboardDateChanged()" />
+        <a class="button paddedbutton" id="dash_filterBtn" href="#" onclick="if($(this).attr('disabled') != 'disabled') RefreshDashboardRange(); return false">Refresh</a>
     </div>
 </div>
 
@@ -124,9 +124,9 @@
 <script>
     $(function () {
         kendo.culture('@Model.Culture');
-        $('#dash_dateRangeSel').val('@Model.DateRangeType');
-        $('#dash_startdate').kendoDatePicker();
-        $('#dash_enddate').kendoDatePicker();
+        $('#dash_dateRangeSel').kendoDropDownList({ value: '@Model.DateRangeType' });
+        $('#dash_startdate').kendoDatePicker({ footer: ' ' });
+        $('#dash_enddate').kendoDatePicker({ footer: ' ' });
 
         CreatePerformanceChart([''], [0], 'N0', '@Model.Culture', 173);
         CreateSpendChart(0, 'C0', '@Model.Culture', 'Spend', 75);
@@ -177,7 +177,7 @@
     }
 
     function DashboardDateChanged() {
-        $('#dash_dateRangeSel').val('custom');
+        $('#dash_dateRangeSel').data('kendoDropDownList').value('custom');
     }
     function ChangeDashboardDateRange() {
         var startId = '#dash_startdate';
