--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Reports/_CPMSummaryPartial.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Reports/_CPMSummaryPartial.cshtml
@@ -1,15 +1,15 @@
 ﻿<div style="height: 35px;">
-    <select style="float: left; width: 120px" id="cpmsum_dateRangeSel" onchange="ChangeDateRangeMY('cpmsum')">
+    <select style="width: 140px" id="cpmsum_dateRangeSel" onchange="ChangeDateRangeMY('cpmsum')">
         <option value="prev3months">Prev. 3 Months</option>
         <option value="lastmonth">Last Month</option>
         <option value="ytd">Year to Date</option>
         <option value="custom">- custom -</option>
     </select>
-    <span style="float: left; margin-left: 10px">Start:</span>
-    <input style="float:left; width:100px" id="cpmsum_startdate" name="startdate" type="text" value="@ViewBag.start" onchange="DateChanged('cpmsum')" />
-    <span style="float: left; margin-left: 10px">End:</span>
-    <input style="float:left; width:100px" id="cpmsum_enddate" name="enddate" type="text" value="@ViewBag.end" onchange="DateChanged('cpmsum')" />
-    <a class="button" style="padding: 3px; margin-left: 10px" id="cpmsum_filterBtn" href="#" onclick="if($(this).attr('disabled') != 'disabled') RefreshGrid('cpmsum'); return false">Filter</a>
+    <span class="paddedlabel">Start:</span>
+    <input id="cpmsum_startdate" name="startdate" type="text" value="@ViewBag.start" onchange="DateChanged('cpmsum')" />
+    <span class="paddedlabel">End:</span>
+    <input id="cpmsum_enddate" name="enddate" type="text" value="@ViewBag.end" onchange="DateChanged('cpmsum')" />
+    <a class="button paddedbutton" id="cpmsum_filterBtn" href="#" onclick="if($(this).attr('disabled') != 'disabled') RefreshGrid('cpmsum'); return false">Filter</a>
 </div>
 <div id="cpmsumGrid"></div>
 
@@ -56,6 +56,9 @@
     }
 
     function SetupCPMSummaryGrid(url) {
+        $('#cpmsum_dateRangeSel').kendoDropDownList();
+        $('#cpmsum_startdate').kendoDatePicker({ start: "year", depth: "year", format: "MM/yyyy", footer: " " });
+        $('#cpmsum_enddate').kendoDatePicker({ start: "year", depth: "year", format: "MM/yyyy", footer: " " });
 
         var dataSource = CreateCPMSummaryDataSource(url);
 
@@ -89,8 +92,5 @@
             },
             groupable: true,
         });
-
-        $('#cpmsum_startdate').kendoDatePicker({ start: "year", depth: "year", format: "MM/yyyy" });
-        $('#cpmsum_enddate').kendoDatePicker({ start: "year", depth: "year", format: "MM/yyyy" });
     }
 </script>
