--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Shared/_Portal.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Shared/_Portal.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@{
+    var title = String.IsNullOrWhiteSpace(ViewBag.Title) ? "" : ViewBag.Title + " - ";
+}
+<!DOCTYPE html>
 
 <!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
 <!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
@@ -10,7 +13,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>@ViewBag.Title - Welcome to Foundation</title>
+    <title>@(title)Client Portal</title>
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     @Styles.Render("~/Content/foundation/css")
     @RenderSection("head", required: false)
