--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Reports/_DailySummaryPartial.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Reports/_DailySummaryPartial.cshtml
@@ -119,7 +119,8 @@
         });
         CreateDaySumChart(dataSource);
         dataSource.read();
-        $(".configuration").bind("change", RefreshDaySumChart);
+        $(".configuration").bind("change", UpdateDaySumBaseUnit);
+        dataSource.bind("change", function () { UpdateDaySumChart(true); });
     }
 
     function CreateDaySumChart(dataSource) {
@@ -131,8 +132,8 @@
             },
             theme: $(document).data("kendoSkin") || "default",
             series: [
-                { type: "line", aggregate: "sum", field: "Clicks", name: "Clicks", axis: "clicks" },
-                { type: "line", aggregate: "sum", field: "Revenue", name: "Spend", axis: "spend", tooltip: { format: "C" } }
+                { type: "line", aggregate: "sum", field: "Clicks", name: "Clicks", axis: "clicks", markers: { visible: false }, tooltip: { template: "#= kendo.format('{0:d}', category) #: #= kendo.format('{0:N0}',value) #" } },
+                { type: "line", aggregate: "sum", field: "Revenue", name: "Spend", axis: "spend", markers: { visible: false }, tooltip: { template: "#= kendo.format('{0:d}', category) #: #= kendo.format('{0:C}',value) #" } }
             ],
             categoryAxis: {
                 baseUnit: "days",
@@ -145,8 +146,7 @@
                 { name: "spend", labels: { format: "C", step: 2 }, title: { text: "Spend" } }
             ],
             tooltip: {
-                visible: true,
-                format: "N0"
+                visible: true
             },
             legend: {
                 position: "custom",
@@ -156,13 +156,35 @@
         });
     }
 
-    function RefreshDaySumChart() {
+    function UpdateDaySumBaseUnit() {
         var chart = $("#daysumChart").data("kendoChart"),
             categoryAxis = chart.options.categoryAxis,
             baseUnitInputs = $("input:radio[name=baseUnit]");
 
         categoryAxis.baseUnit = baseUnitInputs.filter(":checked").val();
-
+        UpdateDaySumChart(false);
         chart.refresh();
+    }
+
+    function UpdateDaySumChart(redraw) {
+        var step = 1;
+        var spark = false;
+        var chart = $('#daysumChart').data('kendoChart');
+
+        if (chart.options.categoryAxis.baseUnit == 'days')
+        {
+            var total = chart.dataSource.total();
+            step = Math.ceil(total / 31);
+            spark = (total > 62);
+        }
+
+        chart.options.categoryAxis.labels.step = step;
+
+        chart.options.categoryAxis.majorGridLines.visible = !spark;
+        for (var i = 0; i < chart.options.series.length; i++) {
+            chart.options.series[i].markers.visible = !spark;
+        }
+
+        if (redraw) chart.redraw();
     }
 </script>
