--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Home/ProjectionVis.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Home/ProjectionVis.cshtml
@@ -56,7 +56,9 @@
                     type: "line",
                     field: "Conversions",
                     axis: "leads",
-                    markers: { visible: true }
+                    markers: { visible: true, size: 5 },
+                    dashType: "dot",
+                    missingValues: "interpolate"
                 }
             ],
             categoryAxis: {
