--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Account/Login.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Account/Login.cshtml
@@ -41,3 +41,11 @@
     </div>
 }
 </div>
+
+@section scripts {
+<script>
+    $(function() {
+        $('#UserName').focus();
+    });
+</script>
+}
