--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Account/Login.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Account/Login.cshtml
@@ -10,7 +10,7 @@
 
 <div class="logindiv" style="width: 300px; margin: 100px auto auto auto; text-align: center; border: 10px solid rgb(107,172,236); background-color: white">
     <div style="background-color: rgb(243,243,243); height: 45px; padding-top: 10px">
-        <h4 style="margin-top: 0">Log in to Client Portal</h4>
+        <h4 style="margin-top: 0">Log in to DirectEdge</h4>
     </div>
 @using (Html.BeginForm(new { ReturnUrl = ViewBag.ReturnUrl }))
 {
