--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Home/OfferGoalsRow.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Home/OfferGoalsRow.cshtml
@@ -15,7 +15,7 @@
 
 <!-- Left -->
 <div class="six columns">
-    <div class="panel" style="min-height: 250px">
+    <div class="panel" id="goal@(Model.Id)SumPanel" style="min-height: 250px">
         <span class="offergoalsheader">
             <b>Offer: @Model.Offer.OfferName</b>
             @if (!isMonthly)
