--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Reports/_OfferSummaryPartial.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Reports/_OfferSummaryPartial.cshtml
@@ -3,14 +3,14 @@
         <option value="today">Today</option>
         <option value="yesterday">Yesterday</option>
         <option value="wtd">Week to Date</option>
-        <option value="mtd">Month to Date</option>
+        <option value="mtd" selected="selected">Month to Date</option>
         <option value="ytd">Year to Date</option>
         <option value="lastweek">Last Week</option>
         <option value="lastmonth">Last Month</option>
         <option value="custom">- custom -</option>
     </select>
     <span class="paddedlabel">Start:</span>
-    <input id="offsum_startdate" name="startdate" type="text" value="@ViewBag.today" onchange="DateChanged('offsum')" />
+    <input id="offsum_startdate" name="startdate" type="text" value="@ViewBag.firstOfMonth" onchange="DateChanged('offsum')" />
     <span class="paddedlabel">End:</span>
     <input id="offsum_enddate" name="enddate" type="text" value="@ViewBag.today" onchange="DateChanged('offsum')" />
     <a class="button paddedbutton" id="offsum_filterBtn" href="#" onclick="if($(this).attr('disabled') != 'disabled') RefreshGrid('offsum'); return false">Filter</a>
