--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Dashboard.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Dashboard.cshtml
@@ -39,7 +39,10 @@
                     <th></th>
                     <th>Clicks</th>
                     <th>Leads</th>
-                    <th>&nbsp;Spend</th>
+                    <th>Spend</th>
+                    @if (Model.ShowConvRev) {
+                        <th>@Model.ConvRevName</th>
+                    }
                 </tr>
                 @foreach (var summary in Model.AdvertiserSummaries)
                 {
@@ -48,6 +51,9 @@
                         <td>@String.Format("{0:n0}", summary.Clicks)</td>
                         <td>@String.Format("{0:n0}", summary.Conversions)</td>
                         <td>@summary.RevenueFormatted</td>
+                        @if (Model.ShowConvRev) {
+                            <td>@summary.ConvRevFormatted</td>
+                        }
                     </tr>
                 }
             </table>
